--- a/src/scss/components/_timeline.scss
+++ b/src/scss/components/_timeline.scss
@@ -11,7 +11,6 @@ $nav-color: #999;
     font-size: 80%;
     position: fixed;
     left: 50px;
-    top: 200px;
     text-align: left;
 
     a {
